# tcp-adapter

./: CMakeLists.txt  README.md
include/: tcp-adapter.hpp
src/example/: EchoClient.cpp  EchoServer.cpp
src/tcp/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  Server.cpp  Server.hpp  ServerClient.cpp  ServerClient.hpp
