cmake_minimum_required (VERSION 3.10)

project (tcp-adapter)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

file(GLOB TCP_ADAPTER_SRC CONFIGURE_DEPENDS
    "src/tcp/*.hpp"
    "src/tcp/*.cpp"
)

add_library(TCP_ADAPTER ${TCP_ADAPTER_SRC})
add_library(${PROJECT_NAME} ${TCP_ADAPTER_SRC})
target_link_libraries(${PROJECT_NAME} TCP_ADAPTER)
